@@ -1,2 +1,8 @@
 # Stealth
 tool implementing steganography , cryptography and invisible watermarking
+
+
+#compilation
+
+javac --module-path C:\Users\salas\Downloads\openjfx-21.0.2_windows-x64_bin-sdk\javafx-sdk-21.0.2\lib --add-modules javafx.controls,javafx.swing SteganographyApp.java
+java --module-path C:\Users\salas\Downloads\openjfx-21.0.2_windows-x64_bin-sdk\javafx-sdk-21.0.2\lib --add-modules javafx.controls,javafx.swing SteganographyApp
